test/compile_errors/err_labeled_break_undefined.w
//! expect-check-fail: no enclosing loop or block labeled 'missing

fn main:
    while true:
        break 'missing
